[tool.poetry]
name = "docker"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.5"
mkdocs-section-index = "^0.3.5"
mkdocs-material-extensions = "^1.1.1"
pymdown-extensions = "^9.9.1"
fontawesome-markdown = "^0.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"